# renderer

./: .gitignore  Cargo.toml
src/: main.rs  renderable.rs  renderer.rs  window.rs
src/font/: font.rs  mod.rs
src/renderables/: downsample.rs  font_render.rs  image_render.rs  mod.rs  overlay.rs  pixelate.rs
