[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
winit = "0.28.7"
winit_input_helper = "0.14"
image = "0.24.8"
rayon = "1.8.1"
ttf-parser = "0.20.0"

[profile.release]
debug = true
